tests/ui/type-alias-impl-trait/not-matching-trait-refs-isnt-defining.stderr
error: unconstrained opaque type
  --> $DIR/not-matching-trait-refs-isnt-defining.rs:11:18
   |
LL |     type Assoc = impl Sized;
   |                  ^^^^^^^^^^
   |
   = note: `Assoc` must be used in combination with a concrete type within the same impl

error[E0308]: mismatched types
  --> $DIR/not-matching-trait-refs-isnt-defining.rs:18:54
   |
LL |     type Assoc = impl Sized;
   |                  ---------- the expected opaque type
...
LL |         let _: <Self as Foo<DefinesOpaque>>::Assoc = "";
   |                -----------------------------------   ^^ expected opaque type, found `&str`
   |                |
   |                expected due to this
   |
   = note: expected opaque type `<() as Foo<DefinesOpaque>>::Assoc`
                found reference `&'static str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
